--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,8 @@
   "author": "Hacksore",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
-  }
+    "express": "^4.17.1",
+    "oui": "^10.0.14"
+  },
+  "proxy": "http://localhost:8080"
 }
