--- a/config/dnsmasq.conf
+++ b/config/dnsmasq.conf
@@ -1,7 +1,9 @@
 interface=wlan0 
 listen-address=192.168.86.1
-bind-interfaces 
-server=8.8.8.8
+bind-interfaces
 domain-needed
 bogus-priv
 dhcp-range=192.168.86.100,192.168.86.150,24h
+dhcp-option=3,192.168.86.1
+dhcp-option=6,192.168.86.1
+address=/#/192.168.86.1
